Updated stringFormat to handle line breaks, added error pages for 404 and 50X (500, 501, 503), and fixed the navigation bar on small screen sizes.
NEXT:     Testing and editing pages to ensure efficient and full                 functionality.
          All functionality MUST be completed by midnight 13/12/2024 (or is it 14/12/2024(?))

--- a/static/css/styles/globalStyle.css
+++ b/static/css/styles/globalStyle.css
@@ -12,6 +12,7 @@ body
     background-color: #550527 !important;
     color: #EDD9A3 !important;
     align-content: center !important;
+    width: 100% !important;
 }
 
 .nav-link
